@@ -42,6 +42,13 @@ public class DoubleType extends NumberType<Double>
 
     DoubleType() {super(ComparisonType.CUSTOM);} // singleton
 
+    @Override
+    public boolean allowsEmpty()
+    {
+        return true;
+    }
+
+    @Override
     public boolean isEmptyValueMeaningless()
     {
         return true;
