@@ -76,6 +76,12 @@ public class TupleType extends AbstractType<ByteBuffer>
         this.serializer = new TupleSerializer(fieldSerializers(types));
     }
 
+    @Override
+    public boolean allowsEmpty()
+    {
+        return true;
+    }
+
     private static List<TypeSerializer<?>> fieldSerializers(List<AbstractType<?>> types)
     {
         int size = types.size();
