@@ -20,6 +20,7 @@ package org.apache.cassandra.cql3.validation.operations;
 
 import java.math.BigInteger;
 import java.nio.ByteBuffer;
+import java.util.List;
 
 import org.junit.Assert;
 import org.junit.Test;
@@ -34,6 +35,7 @@ import org.apache.cassandra.db.marshal.Int32Type;
 import org.apache.cassandra.db.marshal.VectorType;
 import org.apache.cassandra.exceptions.InvalidRequestException;
 import org.apache.cassandra.transport.ProtocolVersion;
+import org.apache.cassandra.utils.ByteBufferUtil;
 import org.assertj.core.api.Assertions;
 
 import static java.lang.String.format;
@@ -259,6 +261,47 @@ public class CQLVectorTest extends CQLTester.InMemory
 
         execute("UPDATE %s set VALUE = [1, 1 + (int) ?] WHERE pk = 0", 1);
         test.run();
+    }
+
+    @Test
+    public void nullValues()
+    {
+        assertAcceptsNullValues("int"); // fixed length
+        assertAcceptsNullValues("float"); // fixed length with special/optimized treatment
+        assertAcceptsNullValues("text"); // variable length
+    }
+
+    private void assertAcceptsNullValues(String type)
+    {
+        createTable(format("CREATE TABLE %%s (k int primary key, v vector<%s, 2>)", type));
+
+        execute("INSERT INTO %s (k, v) VALUES (0, null)");
+        assertRows(execute("SELECT * FROM %s"), row(0, null));
+
+        execute("INSERT INTO %s (k, v) VALUES (0, ?)", (List<Integer>) null);
+        assertRows(execute("SELECT * FROM %s"), row(0, null));
+    }
+
+    @Test
+    public void emptyValues() throws Throwable
+    {
+        assertRejectsEmptyValues("int"); // fixed length
+        assertRejectsEmptyValues("float"); // fixed length with special/optimized treatment
+        assertRejectsEmptyValues("text"); // variable length
+    }
+
+    private void assertRejectsEmptyValues(String type) throws Throwable
+    {
+        createTable(format("CREATE TABLE %%s (k int primary key, v vector<%s, 2>)", type));
+
+        assertInvalidThrowMessage(format("Invalid HEX constant (0x) for \"v\" of type vector<%s, 2>", type),
+                                  InvalidRequestException.class,
+                                  "INSERT INTO %s (k, v) VALUES (0, 0x)");
+
+        assertInvalidThrowMessage("Invalid empty vector value",
+                                  InvalidRequestException.class,
+                                  "INSERT INTO %s (k, v) VALUES (0, ?)",
+                                  ByteBufferUtil.EMPTY_BYTE_BUFFER);
     }
 
     @Test
